--- a/404page.html
+++ b/404page.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-		<div class="container clearfix">
+		<div class="container1 clearfix">
 			<div class="text">
 				<h1>Looks like someone's rocker broke!</h1>
 
@@ -36,7 +36,9 @@
 			</div>
 		</div>
 
-		<div class="hide">
+		<div class="container2">
+			<div class="hide">
+			</div>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
