made styles semantic for 404 page

--- a/404page.html
+++ b/404page.html
@@ -9,35 +9,30 @@
 	</head>
 
 	<body>
-		<div class="container1 clearfix">
-			<div class="text">
-				<h1>Looks like someone's rocker broke!</h1>
+		<div class="container404 clearfix">
+			<div class="text404">
+				<h1 id="header404">Looks like someone's rocker broke!</h1>
 
-				<p>Error Code: 404</p>
+				<p class="error404">Error Code: 404</p>
 
-				<p>This page is unavailable</p>
+				<p class="error404">This page is unavailable</p>
 
-				<h4>Here are some useful links to fix your rocker.</h6>
+				<h4 id="fix404">Here are some useful links to fix your rocker.</h6>
 
-				<ul>
-					<li><a href="#" id="lastPage">Last Page</a></li>
+				<ul id="list404">
+					<li class="listItem404"><a href="#" class="link404">Last Page</a></li>
 
-					<li><a href="#" id="home">Home</a></li>
+					<li class="listItem404"><a href="#" class="link404">Home</a></li>
 
-					<li><a href="#" id="profile">Profile</a></li>
+					<li class="listItem404"><a href="#" class="link404">Profile</a></li>
 
-					<li><a href="#" id="about">About</a></li>
+					<li class="listItem404"><a href="#" class="link404">About</a></li>
 
-					<li><a href="#" id="faqs">FAQs</a></li>
+					<li class="listItem404"><a href="#" class="link404">FAQs</a></li>
 				</ul>
 			</div>
 
-			<div class="img">
-			</div>
-		</div>
-
-		<div class="container2">
-			<div class="hide">
+			<div class="img404">
 			</div>
 		</div>
 	</body>
