changed all IDs to classes and made naming consistent

--- a/404page.html
+++ b/404page.html
@@ -9,30 +9,30 @@
 	</head>
 
 	<body>
-		<div class="container404 clearfix">
-			<div class="text404">
-				<h1 id="header404">Looks like someone's rocker broke!</h1>
+		<div class="error-container clearfix">
+			<div class="error-text">
+				<h1 class="error-header">Looks like someone's rocker broke!</h1>
 
-				<p class="error404">Error Code: 404</p>
+				<p class="error-message">Error Code: 404</p>
 
-				<p class="error404">This page is unavailable</p>
+				<p class="error-message">This page is unavailable</p>
 
-				<h4 id="fix404">Here are some useful links to fix your rocker.</h6>
+				<h4 class="error-fix">Here are some useful links to fix your rocker.</h6>
 
-				<ul id="list404">
-					<li class="listItem404"><a href="#" class="link404">Last Page</a></li>
+				<ul class="error-list">
+					<li class="error-listItem"><a href="#" class="error-link">Last Page</a></li>
 
-					<li class="listItem404"><a href="#" class="link404">Home</a></li>
+					<li class="error-listItem"><a href="#" class="error-link">Home</a></li>
 
-					<li class="listItem404"><a href="#" class="link404">Profile</a></li>
+					<li class="error-listItem"><a href="#" class="error-link">Profile</a></li>
 
-					<li class="listItem404"><a href="#" class="link404">About</a></li>
+					<li class="error-listItem"><a href="#" class="error-link">About</a></li>
 
-					<li class="listItem404"><a href="#" class="link404">FAQs</a></li>
+					<li class="error-listItem"><a href="#" class="error-link">FAQs</a></li>
 				</ul>
 			</div>
 
-			<div class="img404">
+			<div class="error-img">
 			</div>
 		</div>
 	</body>
